--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <a class="social-icon" href="mailto:paguielnganji@gmail.com"><i class="fa fa-envelope"></i></a>
               <a class="social-icon" href="https://twitter.com/NganjiPaguiel"><i class="fa fa-twitter"></i></a>
               <a class="social-icon" href="https://www.youtube.com/@1Min.Aviation"><i class="fa fa-youtube"></i></a>
-              <a class="social-icon" href="https://www.instagram.com/paguiel.nganji/"><i class="fa fa-instagram"></i></a></li>
+              <a class="social-icon" href="https://www.instagram.com/paguiel.ng/"><i class="fa fa-instagram"></i></a></li>
               <a class="social-icon" href="https://astrodon.social/@destination_orbite"><i class="fab fa-mastodon text-white"></i></a></li>
             </div>
           </div>
