--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <head>
   <link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
-  <link rel='stylesheet' type="text/css" href='move_project.css'>
+  <link rel='stylesheet' type="text/css" href='index.css'>
 </head>
 <body>
 
