--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ __wm.bt(725,27,25,2,"web","https://www.skyvibes.fr/","20210316025129",1996,"/_st
          <div class="container">
                 <h1>
                     <span>
-                        VOL A SENSATIONS - VOLTIGE                    </span>
+                        VOL A ESCALE - AFRIQUE                    </span>
                     <strong>
                         SKYVIBES                    </strong>
                 
@@ -590,23 +590,16 @@ __wm.bt(725,27,25,2,"web","https://www.skyvibes.fr/","20210316025129",1996,"/_st
   <p>
     Ce projet, mélangeant découverte, humanité et créativité, laissera une empreinte durable sur les terres africaines et dans les cœurs.
   </p>
-</div>
-<div id="accordion">
-  <h3>
-    <div class="accordion-inner">LES OBJECTIFS</div>
+</p></div></div><div id="accordion"><h3><div class="accordion-inner">LES OBJECTIFS</div>
   </h3>
   <div class="accordion-desc">
   <p><strong>1.</strong> Soutenir des projets locaux en santé, éducation, et accès à l'eau potable.</p>
   <p><strong>2.</strong> Sensibiliser à la protection de l'environnement et des espèces menacées.</p>
   <p><strong>3.</strong> Capturer la diversité et la beauté de l'Afrique à travers un film documentaire.</p>
-  <p><strong>4.</strong> Favoriser les échanges culturels et les rencontres humaines enrichissantes.</p>
-  </div>
-  <h3>
-    <div class="accordion-inner">INFOS UTILES</div>
-  </h3>
-  <div class="accordion-desc">
+  <p><strong>4.</strong> Favoriser les échanges culturels et les rencontres humaines enrichissantes.
+</p></div><h3><div class="accordion-inner">INFOS UTILES</div></h3><div class="accordion-desc">
     <p>
-      Les activités se dérouleront dans différentes régions d'Afrique, incluant des missions humanitaires et des explorations.
+     <p> Les activités se dérouleront dans différentes régions d'Afrique, incluant des missions humanitaires et des explorations.
     </p>
     <p>
     La durée moyenne d'une étape sur le terrain est de <strong>3 à 7 jours</strong>, avec des actions spécifiques comme des ateliers, des distributions et des immersions.
@@ -617,7 +610,21 @@ __wm.bt(725,27,25,2,"web","https://www.skyvibes.fr/","20210316025129",1996,"/_st
     <p>
       Si vous avez des questions ou souhaitez nous soutenir, contactez-nous par email à <a href="mailto:contact@afriqueescale.org">contact@afriqueescale.org</a>.
     </p>
-</div></div><div class="the-description-link">SOUTENIR</div>
+</p></div><h3><div class="accordion-inner">FAQ</div></h3><div class="accordion-desc"><p><p>  <h3>La mission aérienne est-elle accessible à tous ?</h3>
+  <p>Oui, presque... Nous accueillons les participants dès l'âge de 12 ans (avec accord parental). La taille maximale est de 1,95 m et le poids est limité à 105 kg. L'expérience n'exige pas de compétences physiques particulières, et notre équipe saura s'adapter à vos envies et besoins. La seule condition est d'avoir l'esprit d'exploration et une envie de découvrir les merveilles du continent.</p>
+
+  <h3>Faut-il prévoir un certificat médical ?</h3>
+  <p>Non, sauf si vous avez des antécédents médicaux sérieux comme des troubles cardiaques, neurologiques ou des problèmes de dos. Dans ce cas, un certificat médical de moins de trois mois sera nécessaire, mentionnant l'absence de contre-indication à cette activité.</p>
+
+  <h3>Quelle tenue adopter pour la mission ?</h3>
+  <p>Portez des vêtements confortables : tenue légère pour les climats chauds, avec une veste légère ou une polaire pour les soirées fraîches. Des chaussures de sport sont recommandées pour les déplacements. Certains équipements, comme un casque ou des protections, seront fournis selon les activités prévues.</p>
+
+  <h3>Puis-je venir accompagné ?</h3>
+  <p>Oui, absolument ! Cette expérience est pensée pour être partagée. Vos proches pourront assister à certaines activités terrestres et aériennes depuis des points de vue sécurisés et profiter avec vous de cette aventure unique.</p>
+
+  <h3>Peut-on effectuer des missions toute l'année ? Quelle est la meilleure période ?</h3>
+  <p>Oui, les missions sont organisées toute l'année, bien que les conditions climatiques varient selon les pays visités. En cas de météo défavorable ou de contretemps, une reprogrammation sera proposée. La période idéale dépend de la destination : nous adapterons nos itinéraires pour maximiser votre expérience.</p></p>
+</p></div></div><div class="the-description-link">SOUTENIR</div>
 </div>
 </div></div></div><div id="pgc-5-0-1" class="panel-grid-cell"><div id="panel-5-0-1-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="1"><div class="so-widget-sow-editor so-widget-sow-editor-base">
 <div class="siteorigin-widget-tinymce textwidget">
@@ -630,14 +637,14 @@ __wm.bt(725,27,25,2,"web","https://www.skyvibes.fr/","20210316025129",1996,"/_st
 </div>
 </div></div></div><div id="pgc-5-1-1" class="panel-grid-cell"><div id="panel-5-1-1-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="3"><div class="so-widget-sow-editor so-widget-sow-editor-base">
 <div class="siteorigin-widget-tinymce textwidget">
-	<div class="the-plane-section"><h2><span>DÉCOUVREZ</span><strong>L’AVION</strong></h2><div class="the-plane-desc"><p><p>Le <strong>Kodiak 100</strong> utilisé est un avion polyvalent et robuste, conçu pour opérer dans des environnements difficiles.<br/>
+	<div class="the-plane-section"><h2><span>DÉCOUVREZ</span><strong>L’AVION</strong></h2><div class="the-plane-desc"><p></strong></h2><div class="the-plane-desc"><p><p>Le <strong>Kodiak 100</strong> utilisé est un avion polyvalent et robuste, conçu pour opérer dans des environnements difficiles.<br/>
 Conçu pour des missions de transport et d’intervention, il est capable de décoller et d'atterrir sur des pistes non préparées, ce qui le rend idéal pour les missions humanitaires et les aventures en terrain difficile.<br/>
 Avec son moteur de 750 chevaux, cet avion peut transporter de lourdes charges et possède une grande autonomie, permettant de répondre aux besoins d'urgence dans des régions isolées. Sa capacité à voler dans des conditions extrêmes garantit une fiabilité essentielle pour des missions de grande envergure.</p>
 </p></div><div class="the-plane-link">SOUTENIR</div></div>
 </div>
-</div></div></div></div></div><div id="pg-5-2" class="panel-grid panel-has-style"><div class="booking-outer soutenir panel-row-style panel-row-style-for-5-2"><div id="pgc-5-2-0" class="panel-grid-cell"><div id="panel-5-2-0-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="4"><div class="so-widget-sow-editor so-widget-sow-editor-base">
+</div></div></div></div></div><div id="pg-5-2" class="panel-grid panel-has-style"><div class="booking-outer reservation panel-row-style panel-row-style-for-5-2"><div id="pgc-5-2-0" class="panel-grid-cell"><div id="panel-5-2-0-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="4"><div class="so-widget-sow-editor so-widget-sow-editor-base">
 <div class="siteorigin-widget-tinymce textwidget">
-	<div class="the-booking-section"><h2><span>SOUTENIR </span><strong>NOTRE PROJET</strong></h2>
+	<div class="the-booking-section"><h2><span>RÉSERVEZ </span><strong>VOTRE BAPTÊME</strong></h2>
 
 <script>
   var hasBookingShortcode = (typeof hasBookingShortcode === 'undefined') ? false : true
@@ -690,7 +697,7 @@ Avec son moteur de 750 chevaux, cet avion peut transporter de lourdes charges et
 			</div>
 			<div class="contact-section">
 				<div class="contact-title">
-					<h3>CONTACTEZ-NOUS au    0614114521</h3>
+					<h3>CONTACTEZ-NOUS au 0614114521</h3>
 				</div>
 				<div class="contact-desc">
 					<p>Pour plus d&rsquo;information, n&rsquo;hésitez pas à nous contacter au <strong>0614114521</strong></p>
