--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@ Avec son moteur de 750 chevaux, cet avion peut transporter de lourdes charges et
 </div>
 </div></div></div></div></div><div id="pg-5-2" class="panel-grid panel-has-style"><div class="booking-outer reservation panel-row-style panel-row-style-for-5-2"><div id="pgc-5-2-0" class="panel-grid-cell"><div id="panel-5-2-0-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="4"><div class="so-widget-sow-editor so-widget-sow-editor-base">
 <div class="siteorigin-widget-tinymce textwidget">
-	<div class="the-booking-section"><h2><span>RÉSERVEZ </span><strong>VOTRE BAPTÊME</strong></h2>
+	<div class="the-booking-section"><h2><span>SOUTENIR</span><strong>NOTRE PROJET</strong></h2>
 
 <script>
   var hasBookingShortcode = (typeof hasBookingShortcode === 'undefined') ? false : true
